syntax = "proto3";
package api;

option go_package = ".;api";

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

message HelloWorldRequest {
    string name = 1;
};

message HelloWorldResponse {
    int32 code = 1;
    string data = 2;
};

service HelloWorldService {
    rpc Greating(HelloWorldRequest) returns (HelloWorldResponse) {
        option (google.api.http) = {
            post: "/helloworld"
            body: "*"
        };
    };
};

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
    info: {
          title: "HelloWorld sample";
          version: "1.0";    
          license: {
              name: "MIT";            
          };
    };
    schemes: HTTP;
    consumes: "application/json";
    produces: "application/json";
  };